# aie-student-ushakov

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW05/: HW05.ipynb  report.md
homeworks/HW06/: HW06.ipynb
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  runs.csv
homeworks/HW10-11/: report.md
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW14/: HW14.ipynb  report.md
project/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  report.md  report_for_word.md  requirements-service.txt  self-checklist.md
project/artifacts/exp02/: metrics_comparison.csv  sim_combined.npy  tfidf_vectorizer.pkl  tours_active.json
project/artifacts/exp03/: best_config.json  model_comparison.csv  scaler.pkl  sim_combined.npy  tfidf_vectorizer.pkl  tours_active.json  weight_search.csv
project/artifacts/exp04/: pca_coords.npy  tsne_coords.npy
project/configs/: .env.example  config.yaml
project/data/: batch_utils.py  data_description.md  generate_tours.py  tours.json
project/notebooks/: exp01_eda.ipynb  exp01_eda_baseline.ipynb  exp02_baseline.ipynb  exp03_weight_tuning.ipynb  exp04_object_map.ipynb
project/src/data/: download.py
project/src/models/: features.py  metrics.py  recommender.py
project/src/service/: app.py
project/tests/: README.md  conftest.py  test_api.py  test_features.py  test_metrics.py  test_recommender.py
(+18 files in other folders)
