[project]
name = "tour-recommender"
version = "1.0.0"
description = "Content-based similar tours recommender service"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
